RoseParser.java
// Generated from Rose.g4 by ANTLR 4.9.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RoseParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BEGIN=1, DECLARE=2, ELSE=3, END=4, EXIT=5, FOR=6, IF=7, IN=8, INTEGER=9, 
		IS=10, LOOP=11, PROCEDURE=12, READ=13, THEN=14, WRITE=15, ID=16, CONST=17, 
		COLON=18, OP1=19, SEMICOLON=20, ADD=21, SUB=22, MUL=23, DIV=24, PERCENT=25, 
		EQUAL=26, OP2=27, GREATER=28, GREEQU=29, LESS=30, LESEQU=31, AND=32, OR=33, 
		EXCLAMATION=34, OP3=35, LP=36, RP=37, WHITESPACE=38, COMMENT=39;
	public static final int
		RULE_program = 0, RULE_variables = 1, RULE_variable = 2, RULE_statements = 3, 
		RULE_statements_ = 4, RULE_statement = 5, RULE_assignment_statement = 6, 
		RULE_if_statement = 7, RULE_if_statement_ = 8, RULE_for_statement = 9, 
		RULE_exit_statement = 10, RULE_read_statement = 11, RULE_write_statement = 12, 
		RULE_bool_expression = 13, RULE_bool_expression_ = 14, RULE_bool_term = 15, 
		RULE_bool_term_ = 16, RULE_bool_factor = 17, RULE_bool_primary = 18, RULE_relation_op = 19, 
		RULE_arith_expression = 20, RULE_arith_expression_ = 21, RULE_arith_term = 22, 
		RULE_arith_term_ = 23, RULE_arith_factor = 24, RULE_arith_primary = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "variables", "variable", "statements", "statements_", "statement", 
			"assignment_statement", "if_statement", "if_statement_", "for_statement", 
			"exit_statement", "read_statement", "write_statement", "bool_expression", 
			"bool_expression_", "bool_term", "bool_term_", "bool_factor", "bool_primary", 
			"relation_op", "arith_expression", "arith_expression_", "arith_term", 
			"arith_term_", "arith_factor", "arith_primary"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'begin'", "'declare'", "'else'", "'end'", "'exit'", "'for'", "'if'", 
			"'in'", "'integer'", "'is'", "'loop'", "'procedure'", "'read'", "'then'", 
			"'write'", null, null, "':'", "'..'", "';'", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'='", "'<>'", "'>'", "'>='", "'<'", "'<='", "'&&'", "'||'", "'!'", 
			"':='", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BEGIN", "DECLARE", "ELSE", "END", "EXIT", "FOR", "IF", "IN", "INTEGER", 
			"IS", "LOOP", "PROCEDURE", "READ", "THEN", "WRITE", "ID", "CONST", "COLON", 
			"OP1", "SEMICOLON", "ADD", "SUB", "MUL", "DIV", "PERCENT", "EQUAL", "OP2", 
			"GREATER", "GREEQU", "LESS", "LESEQU", "AND", "OR", "EXCLAMATION", "OP3", 
			"LP", "RP", "WHITESPACE", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Rose.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RoseParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROCEDURE() { return getToken(RoseParser.PROCEDURE, 0); }
		public TerminalNode ID() { return getToken(RoseParser.ID, 0); }
		public TerminalNode IS() { return getToken(RoseParser.IS, 0); }
		public TerminalNode DECLARE() { return getToken(RoseParser.DECLARE, 0); }
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public TerminalNode BEGIN() { return getToken(RoseParser.BEGIN, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode END() { return getToken(RoseParser.END, 0); }
		public TerminalNode SEMICOLON() { return getToken(RoseParser.SEMICOLON, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RoseListener ) ((RoseListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RoseListener ) ((RoseListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(PROCEDURE);
			setState(53);
			match(ID);
			setState(54);
			match(IS);
			setState(55);
			match(DECLARE);
			 System.out.println("\t" + ".data"); 
			setState(57);
			variables();
			setState(58);
			match(BEGIN);
			 System.out.println("\t" + ".text"); System.out.println("main:"); 
			setState(60);
			statements(0,1);
			setState(61);
			match(END);
			setState(62);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablesContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public VariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RoseListener ) ((RoseListener)listener).enterVariables(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RoseListener ) ((RoseListener)listener).exitVariables(this);
		}
	}

	public final VariablesContext variables() throws RecognitionException {
		VariablesContext _localctx = new VariablesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_variables);
		try {
			setState(68);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				variable();
				setState(65);
				variables();
				}
				break;
			case BEGIN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode ID() { return getToken(RoseParser.ID, 0); }
		public TerminalNode COLON() { return getToken(RoseParser.COLON, 0); }
		public TerminalNode INTEGER() { return getToken(RoseParser.INTEGER, 0); }
		public TerminalNode SEMICOLON() { return getToken(RoseParser.SEMICOLON, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RoseListener ) ((RoseListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RoseListener ) ((RoseListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			((VariableContext)_localctx).ID = match(ID);
			setState(71);
			match(COLON);
			setState(72);
			match(INTEGER);
			setState(73);
			match(SEMICOLON);
			System.out.println((((VariableContext)_localctx).ID!=null?((VariableContext)_localctx).ID.getText():null) +":\t.word\t 0");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public int reg;
		public int label;
		public int nreg;
		public int nlabel;
		public Statements_Context statements_;
		public Statements_Context statements_() {
			return getRuleContext(Statements_Context.class,0);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatementsContext(ParserRuleContext parent, int invokingState, int reg, int label) {
			super(parent, invokingState);
			this.reg = reg;
			this.label = label;
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RoseListener ) ((RoseListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RoseListener ) ((RoseListener)listener).exitStatements(this);
		}
	}

	public final StatementsContext statements(int reg,int label) throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState(), reg, label);
		enterRule(_localctx, 6, RULE_statements);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			((StatementsContext)_localctx).statements_ = statements_(_localctx.reg,_localctx.label);

					((StatementsContext)_localctx).nreg = ((StatementsContext)_localctx).statements_.nreg;
					((StatementsContext)_localctx).nlabel = ((StatementsContext)_localctx).statements_.nlabel;
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statements_Context extends ParserRuleContext {
		public int reg;
		public int label;
		public int nreg;
		public int nlabel;
		public StatementContext statement;
		public Statements_Context statements_;
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public Statements_Context statements_() {
			return getRuleContext(Statements_Context.class,0);
		}
		public Statements_Context(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Statements_Context(ParserRuleContext parent, int invokingState, int reg, int label) {
			super(parent, invokingState);
			this.reg = reg;
			this.label = label;
		}
		@Override public int getRuleIndex() { return RULE_statements_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RoseListener ) ((RoseListener)listener).enterStatements_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RoseListener ) ((RoseListener)listener).exitStatements_(this);
		}
	}

	public final Statements_Context statements_(int reg,int label) throws RecognitionException {
		Statements_Context _localctx = new Statements_Context(_ctx, getState(), reg, label);
		enterRule(_localctx, 8, RULE_statements_);
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EXIT:
			case FOR:
			case IF:
			case READ:
			case WRITE:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				((Statements_Context)_localctx).statement = statement(_localctx.reg,_localctx.label);

						((Statements_Context)_localctx).reg = ((Statements_Context)_localctx).statement.nreg;
						((Statements_Context)_localctx).label = ((Statements_Context)_localctx).statement.nlabel;
					
				setState(81);
				((Statements_Context)_localctx).statements_ = statements_(_localctx.reg,_localctx.label);

						((Statements_Context)_localctx).nreg = ((Statements_Context)_localctx).statements_.nreg;
						((Statements_Context)_localctx).nlabel = ((Statements_Context)_localctx).statements_.nlabel;
					
				}
				break;
			case ELSE:
			case END:
				enterOuterAlt(_localctx, 2);
				{

						((Statements_Context)_localctx).nreg = _localctx.reg;
						((Statements_Context)_localctx).nlabel = _localctx.label;
					
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public int reg;
		public int label;
		public int nreg;
		public int nlabel;
		public Assignment_statementContext assignment_statement;
		public If_statementContext if_statement;
		public For_statementContext for_statement;
		public Read_statementContext read_statement;
		public Write_statementContext write_statement;
		public Assignment_statementContext assignment_statement() {
			return getRuleContext(Assignment_statementContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public For_statementContext for_statement() {
			return getRuleContext(For_statementContext.class,0);
		}
		public Exit_statementContext exit_statement() {
			return getRuleContext(Exit_statementContext.class,0);
		}
		public Read_statementContext read_statement() {
			return getRuleContext(Read_statementContext.class,0);
		}
		public Write_statementContext write_statement() {
			return getRuleContext(Write_statementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatementContext(ParserRuleContext parent, int invokingState, int reg, int label) {
			super(parent, invokingState);
			this.reg = reg;
			this.label = label;
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RoseListener ) ((RoseListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RoseListener ) ((RoseListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement(int reg,int label) throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState(), reg, label);
		enterRule(_localctx, 10, RULE_statement);
		try {
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				((StatementContext)_localctx).assignment_statement = assignment_statement(_localctx.reg);

						((StatementContext)_localctx).nreg = ((StatementContext)_localctx).assignment_statement.nreg;
						((StatementContext)_localctx).nlabel = _localctx.label;
					
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				((StatementContext)_localctx).if_statement = if_statement(_localctx.reg,_localctx.label);

						((StatementContext)_localctx).nreg = ((StatementContext)_localctx).if_statement.nreg;
						((StatementContext)_localctx).nlabel = ((StatementContext)_localctx).if_statement.nlabel;
					
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				((StatementContext)_localctx).for_statement = for_statement(_localctx.reg,_localctx.label);

						((StatementContext)_localctx).nreg = ((StatementContext)_localctx).for_statement.nreg;
						((StatementContext)_localctx).nlabel = ((StatementContext)_localctx).for_statement.nlabel;
					
				}
				break;
			case EXIT:
				enterOuterAlt(_localctx, 4);
				{
				setState(96);
				exit_statement();

						((StatementContext)_localctx).nreg = _localctx.reg;
						((StatementContext)_localctx).nlabel = _localctx.label;
					
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 5);
				{
				setState(99);
